// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/HStack passes the snapshot test 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    divider={<Memo(Divider) />}
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 100,
          "marginRight": "l",
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 100,
            "marginRight": "l",
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 100,
          "marginRight": "l",
          "width": 20,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#E4E9F2",
          "marginRight": "l",
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#E4E9F2",
            "marginRight": "l",
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#E4E9F2",
          "height": "100%",
          "marginRight": "l",
          "width": 1,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginRight": "l",
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 20,
            "marginRight": "l",
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginRight": "l",
          "width": 20,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#E4E9F2",
          "marginRight": "l",
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#E4E9F2",
            "marginRight": "l",
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#E4E9F2",
          "height": "100%",
          "marginRight": "l",
          "width": 1,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginRight": "l",
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 20,
            "marginRight": "l",
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginRight": "l",
          "width": 20,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#E4E9F2",
          "marginRight": "l",
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#E4E9F2",
            "marginRight": "l",
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#E4E9F2",
          "height": "100%",
          "marginRight": "l",
          "width": 1,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 20,
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`Atoms/Stack passes the snapshot test for horizontal direction 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    divider={<Memo(Divider) />}
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 100,
          "marginRight": "l",
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 100,
            "marginRight": "l",
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 100,
          "marginRight": "l",
          "width": 20,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#E4E9F2",
          "marginRight": "l",
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#E4E9F2",
            "marginRight": "l",
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#E4E9F2",
          "height": "100%",
          "marginRight": "l",
          "width": 1,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginRight": "l",
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 20,
            "marginRight": "l",
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginRight": "l",
          "width": 20,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#E4E9F2",
          "marginRight": "l",
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#E4E9F2",
            "marginRight": "l",
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#E4E9F2",
          "height": "100%",
          "marginRight": "l",
          "width": 1,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginRight": "l",
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 20,
            "marginRight": "l",
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginRight": "l",
          "width": 20,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#E4E9F2",
          "marginRight": "l",
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#E4E9F2",
            "marginRight": "l",
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#E4E9F2",
          "height": "100%",
          "marginRight": "l",
          "width": 1,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 20,
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`Atoms/Stack passes the snapshot test for vertical direction 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={
      {
        "marginTop": "l",
      }
    }
    animatedStyle={
      {
        "value": {
          "marginTop": "l",
        },
      }
    }
    collapsable={false}
    divider={<Memo(Divider) />}
    style={
      {
        "flexDirection": "column",
        "flexWrap": "nowrap",
        "marginTop": "l",
      }
    }
  >
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginBottom": "l",
          "width": 100,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 20,
            "marginBottom": "l",
            "width": 100,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginBottom": "l",
          "width": 100,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#E4E9F2",
          "marginBottom": "l",
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#E4E9F2",
            "marginBottom": "l",
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#E4E9F2",
          "height": 1,
          "marginBottom": "l",
          "width": "100%",
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginBottom": "l",
          "width": "40%",
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 20,
            "marginBottom": "l",
            "width": "40%",
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginBottom": "l",
          "width": "40%",
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#E4E9F2",
          "marginBottom": "l",
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#E4E9F2",
            "marginBottom": "l",
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#E4E9F2",
          "height": 1,
          "marginBottom": "l",
          "width": "100%",
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginBottom": "l",
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 20,
            "marginBottom": "l",
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginBottom": "l",
          "width": 20,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#E4E9F2",
          "marginBottom": "l",
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#E4E9F2",
            "marginBottom": "l",
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#E4E9F2",
          "height": 1,
          "marginBottom": "l",
          "width": "100%",
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 20,
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`Atoms/VStack passes the snapshot test 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={{}}
    animatedStyle={
      {
        "value": {},
      }
    }
    collapsable={false}
    divider={<Memo(Divider) />}
    style={
      {
        "flexDirection": "column",
        "flexWrap": "nowrap",
      }
    }
  >
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 100,
          "marginBottom": "l",
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 100,
            "marginBottom": "l",
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 100,
          "marginBottom": "l",
          "width": 20,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#E4E9F2",
          "marginBottom": "l",
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#E4E9F2",
            "marginBottom": "l",
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#E4E9F2",
          "height": 1,
          "marginBottom": "l",
          "width": "100%",
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginBottom": "l",
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 20,
            "marginBottom": "l",
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginBottom": "l",
          "width": 20,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#E4E9F2",
          "marginBottom": "l",
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#E4E9F2",
            "marginBottom": "l",
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#E4E9F2",
          "height": 1,
          "marginBottom": "l",
          "width": "100%",
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginBottom": "l",
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 20,
            "marginBottom": "l",
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "marginBottom": "l",
          "width": 20,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#E4E9F2",
          "marginBottom": "l",
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#E4E9F2",
            "marginBottom": "l",
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#E4E9F2",
          "height": 1,
          "marginBottom": "l",
          "width": "100%",
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "width": 20,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 20,
            "width": 20,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`Atoms/ZStack passes the snapshot test 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    animate={
      {
        "alignSelf": "flex-start",
      }
    }
    animatedStyle={
      {
        "value": {
          "alignSelf": "flex-start",
        },
      }
    }
    collapsable={false}
    style={
      {
        "alignSelf": "flex-start",
      }
    }
  >
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 100,
          "marginLeft": 0,
          "position": "relative",
          "width": 100,
          "zIndex": 0,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 100,
            "marginLeft": 0,
            "position": "relative",
            "width": 100,
            "zIndex": 0,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 100,
          "marginLeft": 0,
          "position": "relative",
          "width": 100,
          "zIndex": 0,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#8F9BB3",
          "height": 50,
          "marginLeft": 2,
          "position": "absolute",
          "width": 50,
          "zIndex": 1,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#8F9BB3",
            "height": 50,
            "marginLeft": 2,
            "position": "absolute",
            "width": 50,
            "zIndex": 1,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#8F9BB3",
          "height": 50,
          "marginLeft": 2,
          "position": "absolute",
          "width": 50,
          "zIndex": 1,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#FF4B42",
          "height": 20,
          "marginLeft": 4,
          "position": "absolute",
          "width": 20,
          "zIndex": 2,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#FF4B42",
            "height": 20,
            "marginLeft": 4,
            "position": "absolute",
            "width": 20,
            "zIndex": 2,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#FF4B42",
          "height": 20,
          "marginLeft": 4,
          "position": "absolute",
          "width": 20,
          "zIndex": 2,
        }
      }
    />
  </View>
  <View
    animate={
      {
        "alignSelf": "flex-start",
        "marginTop": 32,
      }
    }
    animatedStyle={
      {
        "value": {
          "alignSelf": "flex-start",
          "marginTop": 32,
        },
      }
    }
    collapsable={false}
    style={
      {
        "alignSelf": "flex-start",
        "marginTop": 32,
      }
    }
  >
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 100,
          "marginLeft": 0,
          "position": "relative",
          "width": 100,
          "zIndex": 3,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 100,
            "marginLeft": 0,
            "position": "relative",
            "width": 100,
            "zIndex": 3,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 100,
          "marginLeft": 0,
          "position": "relative",
          "width": 100,
          "zIndex": 3,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#8F9BB3",
          "height": 50,
          "marginLeft": 2,
          "position": "absolute",
          "width": 50,
          "zIndex": 2,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#8F9BB3",
            "height": 50,
            "marginLeft": 2,
            "position": "absolute",
            "width": 50,
            "zIndex": 2,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#8F9BB3",
          "height": 50,
          "marginLeft": 2,
          "position": "absolute",
          "width": 50,
          "zIndex": 2,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#FF4B42",
          "height": 20,
          "marginLeft": 4,
          "position": "absolute",
          "width": 20,
          "zIndex": 1,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#FF4B42",
            "height": 20,
            "marginLeft": 4,
            "position": "absolute",
            "width": 20,
            "zIndex": 1,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#FF4B42",
          "height": 20,
          "marginLeft": 4,
          "position": "absolute",
          "width": 20,
          "zIndex": 1,
        }
      }
    />
  </View>
  <View
    animate={
      {
        "alignSelf": "flex-start",
        "marginTop": 32,
      }
    }
    animatedStyle={
      {
        "value": {
          "alignSelf": "flex-start",
          "marginTop": 32,
        },
      }
    }
    collapsable={false}
    style={
      {
        "alignSelf": "flex-start",
        "marginTop": 32,
      }
    }
  >
    <View
      animate={
        {
          "backgroundColor": "#6A7BFF",
          "height": 100,
          "marginLeft": 0,
          "position": "relative",
          "width": 100,
          "zIndex": 0,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#6A7BFF",
            "height": 100,
            "marginLeft": 0,
            "position": "relative",
            "width": 100,
            "zIndex": 0,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#6A7BFF",
          "height": 100,
          "marginLeft": 0,
          "position": "relative",
          "width": 100,
          "zIndex": 0,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#8F9BB3",
          "height": 50,
          "marginLeft": 2,
          "position": "absolute",
          "width": 50,
          "zIndex": 10,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#8F9BB3",
            "height": 50,
            "marginLeft": 2,
            "position": "absolute",
            "width": 50,
            "zIndex": 10,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#8F9BB3",
          "height": 50,
          "marginLeft": 2,
          "position": "absolute",
          "width": 50,
          "zIndex": 10,
        }
      }
    />
    <View
      animate={
        {
          "backgroundColor": "#FF4B42",
          "height": 20,
          "marginLeft": 4,
          "position": "absolute",
          "width": 20,
          "zIndex": 2,
        }
      }
      animatedStyle={
        {
          "value": {
            "backgroundColor": "#FF4B42",
            "height": 20,
            "marginLeft": 4,
            "position": "absolute",
            "width": 20,
            "zIndex": 2,
          },
        }
      }
      collapsable={false}
      style={
        {
          "backgroundColor": "#FF4B42",
          "height": 20,
          "marginLeft": 4,
          "position": "absolute",
          "width": 20,
          "zIndex": 2,
        }
      }
    />
  </View>
</View>
`;
